Main Navigation Redesign - Small quick fix to make main navigation visible and usable.

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,12 +98,13 @@ iframe {
 
 nav.nav-header {
     /*align-items: center;*/
-    background-color: rgba(0,0,0,.7);
+    /*background-color: rgba(0,0,0,.7);*/
     /*display: flex;*/
     height: 50px; /*temprarily enlarged to 300px so i can see menu list*/
     /*max-width: inherit;*/
     /*overflow: hidden;*/
-    position: fixed;
+    color: #000000 !important;
+    position: absolute;
     top: 0;
     -webkit-transition: height .5s ease-out;
     transition: height 2s ease;
@@ -165,7 +166,7 @@ div#menu h3 {
     margin-bottom: 5px;
     font-weight: 100;
     font-size: 1.1em;
-    color: #ddd;
+    color: #000;
 }
 
 div#menu-items {
